src/objects/collect__Queue__c.object
<CustomObject>
    <description>Custom Queue to assign Contract to it.</description>
    <fields>
        <fullName>collect__Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marks, whether this queue is available for use or not.</description>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>collect__Evaluation_Rule__c</fullName>
        <label>Evaluation Rule</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>collect__Open_Queue_Contract_Records__c</fullName>
        <label>Open Queue Contract Records</label>
        <summaryFilterItems>
            <field>collect__Queue_Contract__c.collect__Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </summaryFilterItems>
        <summaryForeignKey>collect__Queue_Contract__c.collect__Queue__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>collect__Product_Type__c</fullName>
        <label>Product Type</label>
        <picklist>
            <picklistValues>
                <fullName>Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lease</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Queue</label>
    <nameField>
        <label>Queue Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Queues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>